# transit-gateway-attachment-manager

./: .gitignore  README.md  api_gw.tf  eventbridge.tf  lambda.tf  locals.tf  outputs.tf  sns.tf  steps.tf  terraform.tfvars.example  variables.tf  versions.tf
functions/: README.md  pyproject.toml
functions/src/collect_pool_tags/: handler.py
functions/src/common/python/: models.py
functions/src/handle_accept/: README.md  handler.py  pyproject.toml
functions/src/handle_accept/tests/: test_handler.py
functions/src/handle_approval_callback/: README.md  handler.py  pyproject.toml
functions/src/handle_approval_callback/tests/: test_handler.py
functions/src/handle_association/: README.md  handler.py  pyproject.toml
functions/src/handle_association/tests/: test_handler.py
functions/src/handle_attachment_tags/: handler.py  pyproject.toml
functions/src/handle_propagation/: handler.py  pyproject.toml
functions/src/handle_propagation/tests/: test_handler.py
functions/src/send_approval_email/: README.md  handler.py  pyproject.toml
functions/src/send_approval_email/tests/: test_handler.py
functions/src/send_approval_slack/: README.md  __init__.py  handler.py  pyproject.toml
functions/src/send_approval_slack/tests/: test_handler.py
functions/src/validate_iam/: handler.py  pyproject.toml
functions/src/validate_iam/tests/: test_handler.py
functions/src/validate_ipam/: handler.py  pyproject.toml
functions/src/validate_ipam/tests/: test_handler.py
functions/src/wait_for_available_tgwa/: handler.py  pyproject.toml
modules/package/: main.tf  (+1 more)
(+1 files in other folders)
