[project]
name = "tgw-auto-accept"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "moto>=5.1.4",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.uv.workspace]
members = [
    "src/collect*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
